# ruf-audit

./: .gitignore  Cargo.toml  README.md  rust-toolchain  test.rs
audit/: Cargo.toml
audit/src/: audit.rs  config.rs  error.rs  extract.rs  main.rs  utils.rs  utils76.rs
audit/src/build_config/: impl.rs  mod.rs
audit/src/dep_manager/: impl.rs  mod.rs
driver/: Cargo.toml
driver/src/: main.rs
ruf_audit/: Cargo.toml
ruf_audit/src/: main.rs  utils.rs
ruf_scanner/src/: main.rs  rustc76.rs
scanner/: Cargo.toml
scanner/src/: main.rs  rustc70.rs  rustc76.rs
src/: main.rs  utils.rs
test/: README  rust-toolchain  test.rs
test/dep1/src/: lib.rs
test/dep2/: Cargo.toml
test/dep2/src/: lib.rs
test/dep3/: Cargo.toml
test/dep3/src/: lib.rs
test/root/: Cargo.toml
test/root/src/: main.rs
wrapper/: Cargo.toml
wrapper/src/: main.rs
