[package]
name = "ruf_audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
simplelog = "0.12.1"
regex = "1.10.2"
lazy_static = "1.4.0"
ansi_term = "0.12.1"
fxhash = "0.2.1"
petgraph = "0.6.4"

features = { path = "../deps/features" } 
lockfile = { path = "../deps/lockfile" }
lifetime = { path = "../deps/lifetime" }