[package]
name = "ruf_audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
simplelog = "0.12.1"
regex = "1.10.2"
lazy_static = "1.4.0"
ansi_term = "0.12.1"

basic_usages = { path = "../deps/basic_usages" }
dep_manager = { path = "../deps/dep_manager" }